--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,30 +12,38 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
+     inputs:
+          logLevel:
+            description: 'Log level'
+            required: true
+            default: 'info'
 jobs:
   build:
-    runs-on: ubuntu-latest
-    
+    #runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v1
 
     - name: Mount bazel cache
       uses: actions/cache@v1
       with:
-        path: "/home/runner/.cache/bazel"
+        path: "C:/Users/runneradmin/.cache/bazel"
         key: bazel
 
     - name: Install bazelisk
       run: |
-        curl -LO "https://github.com/bazelbuild/bazelisk/releases/download/v1.1.0/bazelisk-linux-amd64"
-        mkdir -p "${GITHUB_WORKSPACE}/bin/"
-        mv bazelisk-linux-amd64 "${GITHUB_WORKSPACE}/bin/bazel"
-        chmod +x "${GITHUB_WORKSPACE}/bin/bazel"
+        dir env:
+        #curl -LO "https://github.com/bazelbuild/bazelisk/releases/download/v1.1.0/bazelisk-linux-amd64"
+        curl -LO "https://github.com/bazelbuild/bazelisk/releases/download/v1.11.0/bazelisk-windows-amd64.exe"
+        mkdir "${GITHUB_WORKSPACE}/bin/"
+        #mv bazelisk-linux-amd64 "${GITHUB_WORKSPACE}/bin/bazel"
+        mv bazelisk-windows-amd64.exe "${GITHUB_WORKSPACE}\bin\bazel.exe"
+        #chmod +x "${GITHUB_WORKSPACE}/bin/bazel"
 
     - name: Test
       run: |
-        "${GITHUB_WORKSPACE}/bin/bazel" test //...
+        rm bazel.bat
+        \bin\bazel.exe test ...
 
   #  - name: Build
   #    run: |
