--- a/.github/workflows/build-on-macos.yml
+++ b/.github/workflows/build-on-macos.yml
@@ -1,4 +1,7 @@
 # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions
+# https://docs.github.com/en/actions/learn-github-actions/expressions#operators
+# https://github.com/actions/virtual-environments
+
 name: build-on-macos
 
 concurrency: 
@@ -8,66 +11,64 @@ concurrency:
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-#  push:
+  push:
 #    paths:
 #    - .github/workflows/build-on-macos.yml
-#    branches: [ hztest ]
+    branches: [ tmp4macos ] #tmp4macos for trigger this workflow only
 #  pull_request:
 #    branches: [ main ]
   workflow_call:
-     inputs:
-        buildArgs:
-          description: 'buildArgs ie: --test_verbose_timeout_warnings'
-          required: false
-          type: string
+    inputs:
+      buildArgs:
+        description: 'buildArgs ie: --test_verbose_timeout_warnings'
+        required: false
+        type: string
+      cacheOn:
+        description: 'enable cache'
+        required: false
+        default: 'true'
+        type: string
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-     inputs:
-          buildArgs:
-            description: 'buildArgs ie: --test_verbose_timeout_warnings'
-            required: false
-            default: ''
+    inputs:
+      buildArgs:
+        description: 'buildArgs ie: --test_verbose_timeout_warnings'
+        required: false
+        default: '--verbose_failures'
+      cacheOn:
+        description: 'cacheOn: change to false for disable.'
+        required: false
+        default: 'true'
 
-# https://github.com/actions/virtual-environments
 jobs:
   build:
-    #runs-on: ubuntu-latest
-#    runs-on: windows-2019
-#    runs-on: windows-latest
     runs-on: macos-latest
-#    runs-on: ${{ matrix.os }}
-    defaults:
-      run:
+#    defaults:
+#      run:
         # Use a login shell, so that ~/.bash_profile is executed and
-        # the conda environment gets initialised.
-        shell: bash -l {0}
+#        shell: bash -l {0}
     strategy:
       fail-fast: true
- #     matrix:
- #       os: [macos-latest] #ubuntu-18.04, macos-10.15, windows-latest
- #       python: ["3.9"]
     steps:
     - name: cancel previous runs
       uses: styfle/cancel-workflow-action@0.8.0
       with:
         access_token: ${{ github.token }}
     - uses: actions/checkout@v2
-    - uses: maxim-lobanov/setup-xcode@v1
+    - name: Cache multiple paths
+      uses: actions/cache@v2
+      if: ${{ github.event.inputs.cacheOn != 'false'}}
       with:
-        xcode-version: latest-stable
- #   - name: Init conda
- #     shell: bash -l {0}
- #     run: |
- #       conda init bash
+       path: |
+         ~/state/bazel/disk
+         ~/state/bazel/repo
+         ~/state/node_modules
+#        !~/cache/exclude
+       key: ${{ runner.os }}
     - name: build
- #     shell: sh
       env:
-        #VCVARSALL: x64
         RUST_BACKTRACE: 1
       run: |
-         # conda init bash
-         #source ~/.bashrc
-         #conda activate base
-         which bazel
          export PATH="/usr/local/opt/pipx_bin:/usr/local/opt/curl/bin:/usr/local/bin:/usr/local/sbin:/Users/runner/bin:/usr/bin:/bin:/usr/sbin:/sbin:/Library/Apple/usr/bin"
-         ./.buildkite/mac/entrypoint ${{ github.event.inputs.buildArgs }}
+         export STATE=~/state/anki-ci
+         ./.buildkite/mac/entrypoint --disk_cache=~/state/bazel/disk --repository_cache=~/state/bazel/repo ${{ github.event.inputs.buildArgs }}
