--- a/.github/workflows/build-on-windows.yml
+++ b/.github/workflows/build-on-windows.yml
@@ -1,4 +1,6 @@
 # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions
+# https://docs.github.com/en/actions/learn-github-actions/expressions#operators
+# https://github.com/actions/virtual-environments
 
 name: build-on-windows
 
@@ -9,28 +11,35 @@ concurrency:
 # Controls when the workflow will run
 on:
 #  # Triggers the workflow on push or pull request events but only for the main branch
-#  push:
-#    branches: [ main ]
+  push:
+    branches: [ tmp4windows ] #tmp4windows for trigger this workflow only
 #  pull_request:
 #    branches: [ main ]
   workflow_call:
-     inputs:
-        buildArgs:
-          description: 'buildArgs ie: --test_verbose_timeout_warnings'
-          required: false
-          type: string
+    inputs:
+      buildArgs:
+        description: 'buildArgs ie: --test_verbose_timeout_warnings'
+        required: false
+        type: string
+      cacheOn:
+        description: 'enable cache'
+        required: false
+        default: 'true'
+        type: string
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-     inputs:
-          buildArgs:
-            description: 'buildArgs ie: --test_verbose_timeout_warnings'
-            required: false
-            default: '--verbose_failures'
+    inputs:
+      buildArgs:
+        description: 'buildArgs ie: --test_verbose_timeout_warnings'
+        required: false
+        default: '--verbose_failures'
+      cacheOn:
+        description: 'cacheOn: change to false for disable.'
+        required: false
+        default: 'true'
+
 jobs:
   build:
-    #runs-on: ubuntu-latest
-#    runs-on: windows-2019
-#    runs-on: windows-latest
     runs-on: windows-2022
     steps:
     - name: cancel previous runs
@@ -38,24 +47,27 @@ jobs:
       with:
         access_token: ${{ github.token }}
     - uses: actions/checkout@v2
+    - name: Cache multiple paths
+      uses: actions/cache@v2
+      if: ${{ github.event.inputs.cacheOn != 'false'}}
+      with:
+        path: |
+         C:/Users/runneradmin/.cache
+         D:/a/anki/anki/node_modules
+#        !~/cache/exclude
+        key: ${{ runner.os }}
+    # fix Windows Subsystem for Linux has no installed distributions.
     - uses: Vampire/setup-wsl@v1
-#    - name: disable wsl
-#      shell: powershell
-#      run: Disable-WindowsOptionalFeature -Online -FeatureName Microsoft-Windows-Subsystem-Linux
     - name: build
       shell: cmd
       env:
-        #VCVARSALLPATH: |
-        #  C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvarsall.bat
-        #VCVARSALL: x64
         RUST_BACKTRACE: 1
       run: |
-        set PATH=C:\Program Files\Git\bin;C:\Program Files\Git\usr\bin;C:\Program Files\Git\mingw64\bin;%PATH%
-        echo %PATH%
-        set PATH=%PATH:\\=\%
-        mkdir C:\tmp
-        set TMP=C:\tmp
-        set TEMP=C:\tmp
-        bazel.exe --output_user_root=\bazel\ankici --output_base=\bazel\ankici\base test --config=ci ${{ github.event.inputs.buildArgs }} ...
-#        .\.buildkite\windows\entrypoint.bat ${{ inputs.buildArgs }}
+         set PATH=C:\Program Files\Git\usr\bin;C:\Program Files\Git\mingw64\bin;%PATH%
+         echo %PATH%
+         set PATH=%PATH:\\=\%
+         which bazel.exe
+         mkdir \bazel\
+         bazel.exe --output_user_root=\bazel\ankici --output_base=\bazel\ankici\base test --config=ci --disk_cache=C:/Users/runneradmin/.cache/bazel/disk --repository_cache=C:/Users/runneradmin/.cache/bazel/repo ${{ github.event.inputs.buildArgs }} ...
 
+#        .\.buildkite\windows\entrypoint.bat ${{ inputs.buildArgs }}
