--- a/.github/workflows/build-on-windows.yml
+++ b/.github/workflows/build-on-windows.yml
@@ -28,26 +28,14 @@ on:
             default: '--verbose_failures'
 jobs:
   build:
-    #runs-on: ubuntu-latest
-#    runs-on: windows-2019
-#    runs-on: windows-latest
     runs-on: windows-2022
     steps:
-    - name: cancel previous runs
-      uses: styfle/cancel-workflow-action@0.8.0
-      with:
-        access_token: ${{ github.token }}
+
     - uses: actions/checkout@v2
-    - uses: Vampire/setup-wsl@v1
-#    - name: disable wsl
-#      shell: powershell
-#      run: Disable-WindowsOptionalFeature -Online -FeatureName Microsoft-Windows-Subsystem-Linux
+#    - uses: Vampire/setup-wsl@v1
     - name: build
       shell: cmd
       env:
-        #VCVARSALLPATH: |
-        #  C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Auxiliary\Build\vcvarsall.bat
-        #VCVARSALL: x64
         RUST_BACKTRACE: 1
       run: |
         set PATH=C:\Program Files\Git\bin;C:\Program Files\Git\usr\bin;C:\Program Files\Git\mingw64\bin;%PATH%
@@ -58,4 +46,3 @@ jobs:
         set TEMP=C:\tmp
         bazel.exe --output_user_root=\bazel\ankici --output_base=\bazel\ankici\base test --config=ci ${{ github.event.inputs.buildArgs }} ...
 #        .\.buildkite\windows\entrypoint.bat ${{ inputs.buildArgs }}
-
