--- a/.github/workflows/build-on-all-os.yml
+++ b/.github/workflows/build-on-all-os.yml
@@ -11,13 +11,13 @@ on:
   push:
 #    paths:
 #    - .github/workflows/build-on-macos.yml
-    branches: [ main, tmp4build ]
+    branches: [ tmp4build, tmp4build1 ]
     paths-ignore:
     - 'README.md'
     - '.gitignore'
     - '.gitmodules'
-  pull_request:
-    branches: [ main ]
+#  pull_request:
+#    branches: [ main ]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
     inputs:
