--- a/.github/workflows/build-on-all-os.yml
+++ b/.github/workflows/build-on-all-os.yml
@@ -11,7 +11,7 @@ on:
   push:
 #    paths:
 #    - .github/workflows/build-on-macos.yml
-    branches: [ tmp4build, tmp4build1 ]
+    branches: [ tmp4build, tmp4build1, tmp4build2 ]
     paths-ignore:
     - 'README.md'
     - '.gitignore'
