--- a/.github/workflows/build-on-macos.yml
+++ b/.github/workflows/build-on-macos.yml
@@ -11,7 +11,7 @@ on:
 #  push:
 #    paths:
 #    - .github/workflows/build-on-macos.yml
-#    branches: [ hztest ]
+#    branches: [ main ]
 #  pull_request:
 #    branches: [ main ]
   workflow_call:
@@ -33,11 +33,11 @@ jobs:
   build:
     runs-on: macos-latest
 #    runs-on: ${{ matrix.os }}
-#    defaults:
-#      run:
+    defaults:
+      run:
         # Use a login shell, so that ~/.bash_profile is executed and
         # the conda environment gets initialised.
-#        shell: bash -l {0}
+        shell: bash -l {0}
     strategy:
       fail-fast: true
  #     matrix:
