--- a/.github/workflows/build-on-windows.yml
+++ b/.github/workflows/build-on-windows.yml
@@ -9,8 +9,8 @@ concurrency:
 # Controls when the workflow will run
 on:
 #  # Triggers the workflow on push or pull request events but only for the main branch
-#  push:
-#    branches: [ main ]
+  push:
+    branches: [ tmp4windows ]
 #  pull_request:
 #    branches: [ main ]
   workflow_call:
@@ -30,19 +30,23 @@ jobs:
   build:
     runs-on: windows-2022
     steps:
-
+    - name: cancel previous runs
+      uses: styfle/cancel-workflow-action@0.8.0
+      with:
+        access_token: ${{ github.token }}
     - uses: actions/checkout@v2
-#    - uses: Vampire/setup-wsl@v1
+    # fix Windows Subsystem for Linux has no installed distributions.
+    #- uses: Vampire/setup-wsl@v1
     - name: build
       shell: cmd
       env:
         RUST_BACKTRACE: 1
       run: |
-        set PATH=C:\Program Files\Git\bin;C:\Program Files\Git\usr\bin;C:\Program Files\Git\mingw64\bin;%PATH%
+        set PATH=C:\Program Files\Git\usr\bin;C:\Program Files\Git\mingw64\bin;%PATH%
         echo %PATH%
         set PATH=%PATH:\\=\%
-        mkdir C:\tmp
-        set TMP=C:\tmp
-        set TEMP=C:\tmp
         bazel.exe --output_user_root=\bazel\ankici --output_base=\bazel\ankici\base test --config=ci ${{ github.event.inputs.buildArgs }} ...
+#        mkdir C:\tmp
+#        set TMP=C:\tmp
+#        set TEMP=C:\tmp
 #        .\.buildkite\windows\entrypoint.bat ${{ inputs.buildArgs }}
