--- a/.github/workflows/build-on-macos.yml
+++ b/.github/workflows/build-on-macos.yml
@@ -8,10 +8,10 @@ concurrency:
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-#  push:
+  push:
 #    paths:
 #    - .github/workflows/build-on-macos.yml
-#    branches: [ hztest ]
+    branches: [ tmp4macos, '!tmp4build', '!tmp4build1' ]
 #  pull_request:
 #    branches: [ main ]
   workflow_call:
@@ -33,11 +33,11 @@ jobs:
   build:
     runs-on: macos-latest
 #    runs-on: ${{ matrix.os }}
-#    defaults:
-#      run:
+    defaults:
+      run:
         # Use a login shell, so that ~/.bash_profile is executed and
         # the conda environment gets initialised.
-#        shell: bash -l {0}
+        shell: bash -l {0}
     strategy:
       fail-fast: true
  #     matrix:
