chore: change the branch name pattern for trigger these github action workflows.
branch name startsWith 'test4all' will trigger build-on-all-os.yml for test
branch name startsWith 'build4all' will trigger build-on-all-os.yml for build

branch name startsWith 'test4win' will trigger build-on-windows.yml for test
branch name startsWith 'build4win' will trigger build-on-windows.yml for build

branch name startsWith 'test4mac' will trigger build-on-macos.yml for test
branch name startsWith 'build4mac' will trigger build-on-macos.yml for build

branch name startsWith 'test4linux' will trigger build-on-linux.ymlfor test
branch name startsWith 'build4linux' will trigger build-on-linux.yml for build

--- a/.github/workflows/build-on-all-os.yml
+++ b/.github/workflows/build-on-all-os.yml
@@ -15,7 +15,7 @@ on:
   push:
 #    paths:
 #    - .github/workflows/build-on-macos.yml
-    branches: [ tmp4build, tmp4build1, tmp4all ]
+    branches: [ 'test4all**', 'build4all**' ]
     paths-ignore:
     - 'README.md'
     - '.gitignore'
